force-app/main/default/objects/Suma__c/Suma__c.object-meta.xml
<CustomObject>
    <label>Suma</label>
    <nameField>
        <label>Suma Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sumas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>