force-app/main/default/objects/Suma__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>