force-app/main/default/objects/Suma__c/fields/valor1__c.field-meta.xml
<CustomField>
    <fullName>valor1__c</fullName>
    <label>valor1</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>