force-app/main/default/objects/Suma__c/fields/valor2__c.field-meta.xml
<CustomField>
    <fullName>valor2__c</fullName>
    <label>valor2</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>